--- a/pom.xml
+++ b/pom.xml
@@ -65,9 +65,9 @@
 			<version>1.6.0</version>
 		</dependency>
 		<dependency>
-			<groupId>io.minio</groupId>
-			<artifactId>minio</artifactId>
-			<version>8.5.9</version>
+			<groupId>io.github.ilyascheglov</groupId>
+			<artifactId>minio-easy-integration</artifactId>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
